<resources>
    <string name="app_name">Yoohoo</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="welcome_to_check_chat_app">Welcome to Check Chat App</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="your_email">Your Email</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_name">Display Name</string>
    <string name="default_status">Hi There, I am Using Check Chat App</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="user_current_status">User Current Status</string>
    <string name="type_a_message">Type a message</string>
    <string name="your_status">Your Status</string>
    <string name="message_text">Message Text</string>
    <string name="_00_00">00:00</string>
</resources>
