<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.ankit.checkchat.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/default_name"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/default_status"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/colorAccentBtn"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/change_image"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="@android:color/transparent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorAccentBtn"
        android:text="@string/change_status"
        android:textStyle="bold" />

</RelativeLayout>
